MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/modal.scss
@import "../../map_modules/variables";

.modal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: $white;
    width: 35em;
    max-width: 95vw;
    max-height: 95vh;
    overflow-y: auto;
    overflow-x: hidden;
    padding: 0 1em 1em;
    color: $charcoal;
    border: 2px solid $black;
    border-radius: 5px;

    &.modal-large {
        display: flex;
        flex-flow: column nowrap;
        height: 50em;
        width: 50em;
        overflow: hidden;
        padding: 0;

        .title {
            flex: none;
            margin: 0 -1em 0 0;
        }
    }

    .title {
        color: $white;
        overflow: hidden;
        margin: 0 -1em 1em -1em;
        padding: .2em 1em;
        border-bottom: 1px solid $black;

        &.blue {
            background-color: $blue;
        }

        &.green {
            background-color: $green;
        }

        &.red {
            background-color: $red;
        }

        &.orange {
            background-color: $orange;
        }
    }

    .modal-text {
        display: block;
        margin-bottom: 1em;
    }

    .button-container {
        padding-top: 1em;
        text-align: right;
    }

    .content-frame {
        flex: 1 0 auto;
        width: 100%;
        border: none;
        overflow-y: auto;
        overflow-x: hidden;
    }

    .modal-input {
        margin-bottom: 1em;

        &:last-child {
            margin-bottom: 0;
        }
    }

    textarea {
        min-height: 10em;
    }
}

.modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba($charcoal, .5);
}

.ReactModalPortal {
    z-index: 10;
    position: relative;
}

.ReactModal__Overlay {
    opacity: 0;
    transition: opacity 100ms ease-out;
}

.ReactModal__Overlay--after-open{
    opacity: 1;
}

.ReactModal__Overlay--before-close{
    opacity: 0;
}

